--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -1,75 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/8cb19e38e8.js" crossorigin="anonymous"></script>
-    <style>
-        .navbar {
-  height: 100vh;
-  width: 250px;
-}
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/8cb19e38e8.js" crossorigin="anonymous"></script>
+  <style>
+    .navbar {
+      height: 100vh;
+      width: 250px;
+    }
 
-.navbar-brand {
-  margin-top: 10px;
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-}
+    .navbar-nav {
+      padding-top: 20px;
+    }
 
-.navbar-toggler {
-  margin-bottom: 20px;
-}
+    .nav-item {
+      margin-bottom: 10px;
+    }
 
-.nav-link {
-  color: #fff;
-  padding: 10px;
-  margin: 5px;
-}
+    .nav-link {
+      color: #fff;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 10px;
+      transition: all 0.3s ease;
+    }
 
-.nav-link:hover {
-  background-color: #444;
-}
-body{
-    padding: 0px;
+    .nav-link:hover {
+      background-color: #343a40;
+      color: #fff;
+      text-decoration: none;
+    }
 
-}
-#content{
-    background-color: rgba(0, 0, 0, 0.822);
-    padding: 20px 3%;
-}
+    .nav-link.active {
+      background-color: #343a40;
+      color: #fff;
+    }
 
-    </style>
+
+    body {
+      padding: 0px;
+
+    }
+
+    #content {
+      background-color: rgba(0, 0, 0, 0.822);
+      padding: 20px 3%;
+    }
+
+   
+
+    .window-controls {
+      position: fixed;
+      top: 0;
+      right: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+      width: 100px;
+      padding: 5px;
+      margin-right: 10px;
+    }
+
+    .window-control {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+      width: 60px;
+      margin-left: 10px;
+      
+      cursor: pointer;
+    }
+
+    .window-control:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+    }
+
+    .window-control i {
+      font-size: 25px;
+      color: #fff;
+    }
+  </style>
 </head>
-<body>
-    <div class="d-flex flex-row">
-        <nav class="navbar navbar-dark bg-dark ">
-            <ul class="navbar-nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link load-page" href="#" data-url="../view/users.html">Uživatelé</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link load-page" href="#" data-url="page2.html">Page 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link load-page" href="#" data-url="page3.html">Page 3</a>
-              </li>
-            </ul>
-        </nav>
-        <div id="content">
-          
-        </div>
-    </div>
 
-      <script src="../Renderers/indexRenderer.js"></script>
-      <script>
-        
-        </script>
+<body>
+  <div class="window-controls">
+    <div class="window-control minimize">
+      <i class="fas fa-window-minimize"></i>
+    </div>
+    <div class="window-control maximize">
+      <i class="fas fa-window-maximize"></i>
+    </div>
+    <div class="window-control close">
+      <i class="fas fa-times"></i>
+    </div>
+  </div>
+  <div class="d-flex flex-row">
+    <nav class="navbar navbar-dark bg-dark ">
+      <ul class="navbar-nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link load-page active" href="#" data-url="../view/users.html">Uživatelé</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link load-page" href="#" data-url="../view/tools.html">Nástroje</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link load-page" href="#" data-url="../view/settings.html">Nastavení</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link load-page" href="#" data-url="../view/admin.html">Admin</a>
+        </li>
+      </ul>
+    </nav>
+    <div id="content">
+
+    </div>
+  </div>
+
+  <script src="../Renderers/indexRenderer.js"></script>
+  <script>
+
+  </script>
 </body>
 
 </html>
