--- a/frontend/view/users.html
+++ b/frontend/view/users.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/8cb19e38e8.js" crossorigin="anonymous"></script>
     <style>
-        .card{
+        .card-body{
             width: 280px;
             height: 200px;
+            
+        }
+        .card{
             margin: 8px;
+        }
+        .card-img{
+            width: 100%;
+            height: 100%;
+            max-height: 150px;
+            object-fit: cover;
         }
         
     </style>
 </head>
 <body >
    
-        <div id="userroot" class="row d-flex justify-content-start">
+        <div id="users" class="row d-flex justify-content-start">
         
         </div>
         <script src="../Renderers/usersRenderer.js"></script>
