clock in and out, problem with control buttons

--- a/frontend/view/users.html
+++ b/frontend/view/users.html
@@ -9,7 +9,7 @@
     <style>
         .card-body{
             width: 280px;
-            height: 200px;
+            height: 130px;
             
         }
         .card{
@@ -20,6 +20,10 @@
             height: 100%;
             max-height: 150px;
             object-fit: cover;
+        }
+
+        .card .btn{
+            margin: 0px 5px;
         }
         
     </style>
