--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -148,10 +148,7 @@
       <div class="window-control minimize">
         <i class="fas fa-window-minimize"></i>
       </div>
-      <div class="window-control maximize">
-        <i class="fas fa-window-maximize"></i>
-      </div>
-      <div class="window-control close">
+      <div  class="window-control closew">
         <i class="fas fa-times"></i>
       </div>
     </div>
