--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -27,7 +27,7 @@
 
     .nav-link {
       color: #fff;
-      font-size: 16px;
+      font-size: 19px;
       font-weight: bold;
       padding: 10px;
       transition: all 0.3s ease;
@@ -155,7 +155,7 @@
   </div>
   <div class="d-flex flex-row">
     <nav class="navbar navbar-dark bg-dark ">
-      <ul class="navbar-nav flex-column">
+      <ul class="ml-3 navbar-nav flex-column">
         <li class="nav-item">
           <a class="nav-link load-page active" href="#" data-url="../view/users.html">Uživatelé</a>
         </li>
