--- a/frontend/view/tools.html
+++ b/frontend/view/tools.html
@@ -6,8 +6,140 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        body {
+      margin: 0;
+      
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    
+    #toolscontent {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: flex-start;
+      margin: 20px auto;
+      max-width: 1200px;
+      padding: 20px;
+      
+    }
+    .usertable ,.toolfunctions{
+      margin: 0px 10px 10px 10px;
+    }
+    
+    .usertable {
+      flex: 1 1 500px;
+      
+      width: 100%;
+      height: 100%;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      max-height: 450px;
+      overflow: auto;
+    }
+    @media(min-width: 768px) {
+      .usertable {
+        
+      }
+    }
+    
+    h2{
+      font-size: 20px;
+      font-weight: bold;
+      color: white;
+    }
+    
+    .usertable table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    
+    
+    .usertable td {
+      padding: 10px;
+      
+      text-align: start;
+    }
+    .usertable tr{
+    
+    }
+
+    
+    .usertable th {
+      padding: 10px;
+      font-weight: bold;
+      font-size: 22px;
+    }
+    .usertable tr:last-child{
+      border-bottom: none;
+    }
+
+    .usertable td:last-child {
+      width: 50px;
+      
+    }
+    
+    .usertable a {
+      display: inline-block;
+      padding: 5px;
+      color: #fff;
+      border-radius: 4px;
+      text-decoration: none;
+    }
+    
+    
+    .usertable a i {
+      margin-right: 5px;
+    }
+    
+    .toolfunctions {
+      flex: 1 1 300px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+    
+   
+    
+    .toolfunctions p {
+      margin: 10px;
+      padding: 10px;
+      text-align: center;
+    }
+    
+    .toolfunctions p a {
+      display: block;
+      padding: 5px;
+      color: #fff;
+      background-color: #4CAF50;
+      border-radius: 4px;
+      text-decoration: none;
+    }
+    .tool-card{
+      border-radius: 10px;
+      background-color: #222;
+      padding: 10px;
+      color: white;
+    }
+    .card{
+      background-color: #222;
+      border: none !important;;
+    }
+       
+    </style>
 </head>
 <body>
-    <h1>tools</h1>
+    <div class="w-100 d-flex flex-row row justify-content-around   " id="toolscontent">
+        <div id="usertable" class="left tool-card usertable h-100">
+          
+        </div>
+        <div id="toolfunctions " class="right tool-card toolfunctions">
+          <div class="card mb-3">
+            <div class="card-body">
+              <label for="search">Vyhledat uživatele</label>
+              <input type="text" class="form-control" placeholder="Vyhledat..." id="search-input">
+            </div>
+          </div>
+        </div>
+      </div>
+    <script src="../Renderers/toolsRenderer.js"></script>
 </body>
 </html>
