admin login finished, user info corectly rendered

--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -188,10 +188,7 @@
           <a class="nav-link load-page" href="#" data-url="../view/tools.html">Nástroje</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link load-page" href="#" data-url="../view/settings.html">Nastavení</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link load-page" href="#" data-url="../view/admin.html">Admin</a>
+          <a class="nav-link load-page" href="#" data-url="../view/login.html">Admin</a>
         </li>
       </ul>
     </nav>
