--- a/frontend/view/tools.html
+++ b/frontend/view/tools.html
@@ -79,7 +79,7 @@
     }
 
     .usertable td:last-child {
-      width: 50px;
+      width: 35px;
       
     }
     
@@ -207,12 +207,9 @@
   }
   
   .clockinout-table div div {
-    border-bottom: 1px black solid;
+    border-bottom: 1px  #333333 solid;
   }
-  .clockinout-table {
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-  }
+ 
   
 
   .clockinout-table .date {
@@ -226,6 +223,20 @@
   .clockinout-table .clock {
     font-size: smaller;
   }
+
+  .clockinout-table td, .clockinout-table th{
+  border: 2px solid #333333;
+  border-collapse: collapse;
+  padding: 4px 12px;
+  font-size: calc(1.1rem);
+}
+.special-day {
+  background-color: rgb(22, 22, 22);
+}
+
+
+
+
 
 
 
