--- a/frontend/view/users.html
+++ b/frontend/view/users.html
@@ -11,8 +11,10 @@
             width: 280px;
             height: 130px;
             
+            
         }
         .card{
+            max-width: 280px;
             margin: 8px;
         }
         .card-img{
