moving months in admin, work hours as stats

--- a/frontend/view/login.html
+++ b/frontend/view/login.html
@@ -51,7 +51,7 @@
 
 							<div class="mb-3">
 								<label for="password" class="form-label">Password</label>
-								<input type="password" class="form-control" id="password" name="password" required>
+								<input type="password" value="admin" class="form-control" id="password" name="password" required>
 							</div>
 							<div class="d-grid">
 								<button onclick="verifyPassword()" class="btn btn-primary">Login</button>
