--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -178,7 +178,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex flex-row">
+  <div class="d-flex flex-row absolute_top">
     <nav class="navbar navbar-dark bcolor ">
       <ul class="ml-3 navbar-nav flex-column">
         <li class="nav-item">
