--- a/frontend/view/users.html
+++ b/frontend/view/users.html
@@ -9,7 +9,7 @@
     <style>
         .card-body{
             width: 280px;
-            height: 130px;
+            height: 180px;
             
             
         }
@@ -26,6 +26,7 @@
 
         .card .btn{
             margin: 0px 5px;
+            padding: 30px 30px !important;
         }
         
     </style>
