--- a/frontend/view/admin.html
+++ b/frontend/view/admin.html
@@ -128,12 +128,13 @@
 
     .info-icon{
       border-radius: 8px;
-      width: 35px;
-      height: 35px;
+      width: 100px;
+      height: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
+    
     .toolmodal h2{
         font-size: 25px;
         font-weight: bold;
@@ -237,14 +238,28 @@
     font-size: 15px;
     font-weight: bold;
 }
+.export h1{
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+}
+.btn{
+  padding: 30px !important;
+}
+select{
+  width: 250px !important;
+  height: 50px !important;
+  font-size: 21px;
+  font-weight: bold;
+}
 </style>
 </head>
     <body>
-        <div class="w-100 d-flex flex-row row justify-content-around   " id="admincontent">
-            <div id="usertable" class="left tool-card usertable h-100">
+        <div class="w-100 d-flex flex-row row justify-content-around  row " id="admincontent">
+            <div id="usertable" class="left tool-card col-8 col usertable h-100">
               
             </div>
-            <div id="toolfunctions " class="right tool-card toolfunctions">
+            <div id="toolfunctions " class="right col-4 mb-5 col tool-card toolfunctions">
               <div class="card mb-3">
                 <div class="card-body">
                   <label for="search">Vyhledat uživatele</label>
@@ -260,6 +275,39 @@
               </div>
               
             </div>
+            <div id="fileManagement" class="col-12 mr-4 ml-4 col tool-card mt-3 p-4">
+              <div class="export">
+                <h1>File Management</h1>
+              </div>
+              <form id="exportForm" class="row">
+                <div class="row col col-6 mb-2">
+                  <div class="col-4 col">
+                    <select class="form-select w-100" id="userSelect"></select>
+                  </div>
+                  <div class="col-4 col">
+                    <select class="form-select w-100" id="monthSelect">
+                      <!-- Options for months -->
+                    </select>
+                  </div>
+                  <div class="col-4 col">
+                    <select class="form-select w-100" id="yearSelect">
+                      <!-- Options for years -->
+                    </select>
+                  </div>
+                </div>
+                <div class="row col col-12 mt-3">
+                  <div class="col-12">
+                    <button type="submit" class="btn btn-primary" id="button1">Export Člověk/Měsíc/Rok</button>
+                  </div>
+                  <div class="col-12 mt-3">
+                    <button type="submit" class="btn btn-primary" id="button1">Export Člověk/Rok</button>
+                  </div>
+                </div>
+              </form>
+              <a id="downloadLink" style="display: none;"></a>
+            </div>
+          
+          
             
           </div>
           
