--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -35,19 +35,20 @@
     }
 
     .nav-link {
-      color: #fff;
+      color: black !important;
       font-size: 19px;
       font-weight: bold;
-      padding: 10px;
       transition: all 0.3s ease;
+      text-align: center;
+      padding: 30px 20px !important;
     }
 
     
 
     .nav-link.active {
       transition: 1.5s ease;
-      margin-left: 10px;
-      color: #fff;
+      color: black !important;
+      font-size: 23px;
     }
 
 
@@ -158,6 +159,24 @@
   background-color: #555; /* Set the color of the scrollbar thumb on hover */
 }
 
+.nav-item{
+  
+  background-color: rgba(255, 255, 255, 0.805) !important;
+  font-weight: bold !important;
+  font-size: 32px;
+  border-radius: 12px;
+  width: 150px;
+
+}
+.minimize2{
+  cursor: pointer;
+}
+.top_minimize{
+  background-color: rgba(228, 5, 5, 0.842) !important;
+  list-style: none;
+}
+
+
   </style>
 </head>
 
@@ -191,7 +210,13 @@
           <a class="nav-link load-page" href="#" data-url="../view/login.html">Admin</a>
         </li>
       </ul>
+      <div class="w-100 d-flex justify-content-center">
+        <li class="nav-item  top_minimize">
+          <a class="nav-link minimize2" >Schovat</a>
+        </li>
+      </div>
     </nav>
+    
     <div id="content" class="w-100">
 
     </div>
